--- a/subscriber_image_view/plugin.xml
+++ b/subscriber_image_view/plugin.xml
@@ -1,5 +1,5 @@
 <library path="lib/libsubscriber_image_view">
-  <class name="subscriber_image_view/ImageView" type="subscriber_image_view::ImageView" base_class_type="rqt_gui_cpp::Plugin">
+  <class name="subscriber_image_view/SubsImageView" type="subscriber_image_view::SubsImageView" base_class_type="rqt_gui_cpp::Plugin">
     <description>
       A GUI plugin to view a sensor_msgs/Image topic.
     </description>
@@ -9,7 +9,7 @@
         <icon type="theme">folder</icon>
         <statustip>Plugins related to visualization.</statustip>
       </group>
-      <label>Image View</label>
+      <label>SubsImage View</label>
       <icon type="theme">image-x-generic</icon>
       <statustip>A GUI plugin for viewing sensor_msgs/Image topics.</statustip>
     </qtgui>
